fixing nav problems on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -899,7 +899,6 @@ form
         width: 100%;
     }
 
-    .navbar-fixed-top, 
     .navbar-fixed-bottom {
         position: static;
     }
